# cosmic-script

./: .gitignore  .pre-commit-config.yaml  README.md  clean_cache.js  improvements_report.json  package.json  pyproject.toml  run-dev.bat  run-tests.js  run_pytest.cjs.bak  run_tests.py.bak  sample_story.txt  screenplay.fountain
.github/workflows/: ci.yml
.github_backup/workflows/: ci.yml
.setu/: active.json  context.json
cosmic_script/: __init__.py  cli.py  models.py
cosmic_script/analysis/: __init__.py  coverage.py  logline.py  pacing.py  quality_metrics.py  voice.py
cosmic_script/conversion/: __init__.py  cache.py  converter.py  genres.py  model_router.py  pipeline.py  postprocess.py  prompt_testing.py  prompts.py  quality.py  registry.py  rules_engine.py
cosmic_script/export/: __init__.py  errors.py  exporter.py  fountain.py  page_estimator.py  pdf_export.py  rules.py  validator.py
cosmic_script/ingestion/: __init__.py  chapterizer.py  loader.py
cosmic_script/web/: __init__.py  app.py  (+2 more)
frontend/: index.html  package-lock.json  package.json
tests/: test_chapterizer.py  test_cli.py  test_converter.py  test_coverage.py  test_exporter.py  test_fdx.py  test_fountain.py  test_genres.py  test_integration.py  test_loader.py  test_logline.py  test_models.py  test_pacing.py  test_page_estimator.py  test_pdf_export.py  test_postprocess.py  test_prompt_testing.py  test_prompts.py  test_property_based.py  test_quality.py  test_quality_regression.py  test_registry.py  test_rules_engine.py  test_streaming.py  test_validator.py  test_voice.py  test_web_api.py
(+34 files in other folders)
